--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,19 @@
 </head>
 <body>
   <cake-root></cake-root>
+
+   <script>
+    var prevScrollpos = window.pageYOffset;
+    window.onscroll = function(){
+      var currentScrollPos = window.pageYOffset;
+  if (prevScrollpos > currentScrollPos) {
+    document.querySelector(".container-nav-bar").style.top = "0";
+  } else {
+    document.querySelector(".container-nav-bar").style.top = "-60px";
+  }
+  prevScrollpos = currentScrollPos;
+     
+    }
+  </script>
 </body>
 </html>
