--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Pancake</title>
+  <title>Moon Club</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/nav-bar/logo.png">
 </head>
 <body>
   <cake-root></cake-root>
@@ -20,7 +20,7 @@
     document.querySelector(".container-nav-bar").style.top = "-60px";
   }
   prevScrollpos = currentScrollPos;
-     
+
     }
   </script>
 </body>
